# docs/swagger.json
@@ -440,6 +440,31 @@
           }
         }
       }
+    },
+    "/api/evidences/list": {
+      "get": {
+        "tags": [
+          "evidences"
+        ],
+        "summary": "Listado de evidencias",
+        "description": "Permite obtener el listado de evidencias subidas por el estudiante en caso de ser estudiante.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Listado de evidencias."
+          },
+          "401": {
+            "description": "Error de autenticación , verificar token."
+          },
+          "500": {
+            "description": "Error interno del servidor."
+          }
+        }
+      }
     }
   }
 }
