# src/evidence_record/core/router/evidence.router.js
@@ -5,4 +5,5 @@ const isStudent = require('../../../../middleware/isStudent.middleware')
 const upload = require('../../../../core/uploadHandler')
 
 router.post('/upload', [auth, isStudent, upload.single('file')], evidenceController.uploadEvidence)
+router.get('/list', auth, evidenceController.evidenceList)
 module.exports = router
